# free-software-dev

./: FreeSoftware.tex  Header.tex
Preamble/: title_arm.tex  title_ru.tex
Sources/chapter2/: build_sample.sh  gcc_example_preprocessed.cpp  makefile1
chapter1/: ch1p1.tex  ch1p2.tex  ch1p3.tex  ch1p4.tex
chapter2/: ch2p2.tex  ch2p3.tex  ch2p4.tex  ch2p5.tex
chapter3/: ch3p1.tex  ch3p2.tex  ch3p4.tex  ch3p8.tex
chapter4/: ch4p3.tex  ch4p4.tex  ch4p5.tex
trunk/: vyxodnye.tex
trunk/Preamble/: ISBN.tex  title_en.tex
trunk/Sources/chapter2/: CMakeLists.txt  gcc_example.cpp  makefilevar
trunk/chapter1/: ch1p5.tex
trunk/chapter2/: ch2p1.tex  ch2p3.tex  ch2p4.tex  ch2p5.tex  ch2p6.tex
trunk/chapter3/: ch3p3.tex  ch3p5.tex  ch3p6.tex  ch3p7.tex
trunk/chapter4/: ch4p1.tex  ch4p2.tex
